--- a/Androidproject/app/src/main/res/layout/activity_main.xml
+++ b/Androidproject/app/src/main/res/layout/activity_main.xml
@@ -1,132 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:background="#B3B3B3"
+    tools:context="MainActivity">
 
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/cn7"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:gravity="right|center"
-        android:inputType="text"
-        android:textSize="30pt"
+        android:layout_marginTop="568dp"
+        android:layout_marginEnd="262dp"
+        android:text="7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cn8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="568dp"
+        android:layout_marginEnd="162dp"
+        android:text="8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cn9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="568dp"
+        android:layout_marginEnd="62dp"
+        android:text="9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cn4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="620dp"
+        android:layout_marginEnd="262dp"
+        android:text="4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cn5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="620dp"
+        android:layout_marginEnd="162dp"
+        android:text="5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cn6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="620dp"
+        android:layout_marginEnd="62dp"
+        android:text="6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="672dp"
+        android:layout_marginEnd="262dp"
+        android:text="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cn2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="672dp"
+        android:layout_marginEnd="162dp"
+        android:text="2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cn3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="672dp"
+        android:layout_marginEnd="62dp"
+        android:text="3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cn0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="516dp"
+        android:layout_marginEnd="162dp"
         android:text="0"
-        tools:layout_editor_absoluteX="83dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-            <Button
-                android:id="@+id/bu7"
-                android:text="7"
-                android:layout_height="30pt"
-                android:layout_width="30pt"
-                android:layout_weight="1"
-                android:layout_marginRight="1pt"
-                />
-            <Button
-                android:id="@+id/bu8"
-                android:text="8"
-                android:layout_height="30pt"
-                android:layout_width="30pt"
-                android:layout_weight="1"
-                android:layout_marginRight="1pt"
-                /><Button
-            android:id="@+id/bu9"
-            android:text="9"
-            android:layout_height="30pt"
-            android:layout_width="30pt"
-            android:layout_weight="1"
-            android:layout_marginRight="1pt"
-            />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-            <Button
-                android:id="@+id/bu4"
-                android:text="4"
-                android:layout_height="30pt"
-                android:layout_width="30pt"
-                android:layout_weight="1"
-                android:layout_marginRight="1pt"
-                />
-            <Button
-                android:id="@+id/bu5"
-                android:text="5"
-                android:layout_height="30pt"
-                android:layout_width="30pt"
-                android:layout_weight="1"
-                android:layout_marginRight="1pt"
-                /><Button
-            android:id="@+id/bu6"
-            android:text="6"
-            android:layout_height="30pt"
-            android:layout_width="30pt"
-            android:layout_weight="1"
-            android:layout_marginRight="1pt"
-            />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-            <Button
-                android:id="@+id/bu1"
-                android:text="1"
-                android:layout_height="30pt"
-                android:layout_width="30pt"
-                android:layout_weight="1"
-                android:layout_marginRight="1pt"
-                />
-            <Button
-                android:id="@+id/bu2"
-                android:text="2"
-                android:layout_height="30pt"
-                android:layout_width="30pt"
-                android:layout_weight="1"
-                android:layout_marginRight="1pt"
-                /><Button
-            android:id="@+id/bu3"
-            android:text="3"
-            android:layout_height="30pt"
-            android:layout_width="30pt"
-            android:layout_weight="1"
-            android:layout_marginRight="1pt"
-            />
-        </TableRow>
-    </TableLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <Button
-                android:id="@+id/bu0"
-                android:text="0"
-                android:layout_height="30pt"
-                android:layout_width="30pt"
-                android:layout_weight="13"
-                android:layout_marginRight="1pt"
-                />
-        </TableRow>
-    </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
