--- a/Androidproject/app/src/main/res/layout/activity_main.xml
+++ b/Androidproject/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="468dp"
         android:layout_marginEnd="262dp"
+        android:onClick="clickNumber"
         android:text="7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="468dp"
         android:layout_marginEnd="162dp"
+        android:onClick="clickNumber"
         android:text="8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="468dp"
         android:layout_marginEnd="62dp"
+        android:onClick="clickNumber"
         android:text="9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="520dp"
         android:layout_marginEnd="262dp"
+        android:onClick="clickNumber"
         android:text="4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="520dp"
         android:layout_marginEnd="162dp"
+        android:onClick="clickNumber"
         android:text="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -64,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="520dp"
         android:layout_marginEnd="62dp"
+        android:onClick="clickNumber"
         android:text="6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -74,6 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="572dp"
         android:layout_marginEnd="262dp"
+        android:onClick="clickNumber"
         android:text="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -84,6 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="572dp"
         android:layout_marginEnd="162dp"
+        android:onClick="clickNumber"
         android:text="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -94,6 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="572dp"
         android:layout_marginEnd="62dp"
+        android:onClick="clickNumber"
         android:text="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -104,8 +113,64 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="416dp"
         android:layout_marginEnd="162dp"
+        android:onClick="clickNumber"
         android:text="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="68dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="312dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/threenum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="192dp"
+        android:layout_marginTop="344dp"
+        android:text="0"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/fournum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="212dp"
+        android:layout_marginTop="344dp"
+        android:text="0"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/onenum"
+        android:layout_width="16dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="344dp"
+        android:text="0"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/twonum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="344dp"
+        android:text="0"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
