--- a/Androidproject/app/src/main/res/layout/activity_main.xml
+++ b/Androidproject/app/src/main/res/layout/activity_main.xml
@@ -41,10 +41,10 @@
 
     <Button
         android:id="@+id/buAC"
-        android:layout_width="30pt"
-        android:layout_height="30pt"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="396dp"
+        android:layout_width="111dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="404dp"
         android:layout_weight="1"
         android:onClick="clickObnulenie"
         android:text="obnul"
@@ -152,13 +152,13 @@
 
     <Button
         android:id="@+id/checkButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="264dp"
+        android:layout_width="113dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="404dp"
+        android:layout_marginEnd="36dp"
         android:text="Startui"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/randomTextView"
