--- a/Androidproject/app/src/main/res/layout/activity_main.xml
+++ b/Androidproject/app/src/main/res/layout/activity_main.xml
@@ -142,13 +142,15 @@
 
     <TextView
         android:id="@+id/resultTextView"
-        android:layout_width="121dp"
-        android:layout_height="72dp"
-        android:layout_marginEnd="152dp"
-        android:layout_marginBottom="556dp"
+        android:layout_width="241dp"
+        android:layout_height="121dp"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.141"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.172" />
 
     <Button
         android:id="@+id/checkButton"
