--- a/Androidproject/app/src/main/res/layout/activity_main.xml
+++ b/Androidproject/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
         android:layout_width="111dp"
         android:layout_height="62dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="4dp"
         android:layout_weight="1"
         android:onClick="clickObnulenie"
         android:text="obnul"
@@ -166,10 +166,13 @@
         android:id="@+id/onenum"
         android:layout_width="174dp"
         android:layout_height="70dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="348dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="3dp"
         android:text=""
         android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -189,7 +192,7 @@
         android:id="@+id/checkButton"
         android:layout_width="113dp"
         android:layout_height="59dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="4dp"
         android:text="Startui"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -208,7 +211,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RESTART"
