--- a/Androidproject/app/src/main/res/layout/activity_main.xml
+++ b/Androidproject/app/src/main/res/layout/activity_main.xml
@@ -166,8 +166,6 @@
         android:id="@+id/onenum"
         android:layout_width="174dp"
         android:layout_height="70dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginEnd="120dp"
         android:layout_marginBottom="3dp"
         android:text=""
         android:textSize="30sp"
@@ -203,12 +201,14 @@
 
     <TextView
         android:id="@+id/randomTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="95dp"
+        android:layout_width="52dp"
+        android:layout_height="53dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.908"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.098" />
 
     <Button
         android:id="@+id/start"
